fixed footer spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -1360,6 +1360,10 @@ hr {
     font-size: 1.5rem;
   }
 
+  footer .small {
+    margin-top: 6rem;
+  }
+
 }
 
 
